// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card should render correctly when nested 1`] = `
<div>
  <div
    class="jsx-16278101 card "
  >
    <div
      class="jsx-2956695818 content "
    >
      <div
        class="jsx-2747747579 card "
      >
        <div
          class="jsx-2956695818 content "
        >
          <div
            class="jsx-16278101 card "
          >
            <div
              class="jsx-2956695818 content "
            >
              card
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Card should render different types 1`] = `
<div>
  <div
    class="jsx-2996907570 card "
  >
    <div
      class="jsx-2956695818 content "
    >
      card
    </div>
  </div>
  <div
    class="jsx-2221906198 card "
  >
    <div
      class="jsx-2956695818 content "
    >
      card
    </div>
  </div>
  <div
    class="jsx-3064885888 card "
  >
    <div
      class="jsx-2956695818 content "
    >
      card
    </div>
  </div>
  <div
    class="jsx-1227157556 card "
  >
    <div
      class="jsx-2956695818 content "
    >
      card
    </div>
  </div>
  <div
    class="jsx-2536103364 card "
  >
    <div
      class="jsx-2956695818 content "
    >
      card
    </div>
  </div>
  <div
    class="jsx-2996907570 card "
  >
    <div
      class="jsx-2956695818 content "
    >
      card
    </div>
  </div>
  <div
    class="jsx-3405434593 card "
  >
    <div
      class="jsx-2956695818 content "
    >
      card
    </div>
  </div>
</div>
`;

exports[`Card should support shadow and hoverable 1`] = `
<div>
  <div>
    <div
      class="jsx-1690178701 card "
    >
      <div
        class="jsx-2956695818 content "
      >
        card
      </div>
    </div>
    <div
      class="jsx-2747747579 card "
    >
      <div
        class="jsx-2956695818 content "
      >
        card
      </div>
    </div>
    <div
      class="jsx-2747747579 card "
    >
      <div
        class="jsx-2956695818 content "
      >
        card
      </div>
    </div>
  </div>
</div>
`;
